# lernfabrik-simulation

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
apps/: dashboard.py  run_sim.py
configs/: stellmotor_baseline.yaml
configs/scenarios/: capacity_relief.yaml  downtime_high.yaml  returns_high.yaml
docs/: README.md
learning_factory/: config.py  flows.py  simulate.py  stations.py
